# GMB

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEX.md  CPMS_TECHNICAL.md  Cargo.toml  Dockerfile  GMB_TECHNICAL.md  LICENSE  README.md  SFID_TECHNICAL.md  chain_spec.json  gongminbi.json  rust-toolchain.toml  vault_without_salt.txt
citizenchain/: CITIZENCHAIN_TECHNICAL.md  Cargo.toml  ORACLE_TECHNICAL.md  chainspec.json  nodekey_ed25519  rust-toolchain.toml
citizenchain/.cargo/: config.toml
citizenchain/.github/workflows/: benchmark-weights.yml  ci.yml
citizenchain/citizenui/: CITIZENUI_TECHNICAL.md  Cargo.toml
citizenchain/citizenui/desktop/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.test.json
citizenchain/crates/blockchain-test-harness/: Cargo.toml
citizenchain/crates/chain-signing/: Cargo.toml
citizenchain/crates/qr-protocol/: Cargo.toml
citizenchain/docs/: ACCEPTANCE.md  OFFCHAIN_CLEARING_DESIGN.md
citizenchain/governance/admins-origin-gov/: ADMINSORIGIN_TECHNICAL.md  Cargo.toml
citizenchain/governance/finality-key-gov/: Cargo.toml  FINALITYKEYGOV_TECHNICAL.md
citizenchain/governance/grandpa-key-gov/: Cargo.toml  GRANDPAKEYGOV_TECHNICAL.md
citizenchain/governance/national-institutional-registry/: Cargo.toml
citizenchain/governance/new-sheng-node/: Cargo.toml
citizenchain/governance/resolution-destro-gov/: Cargo.toml  RESOLUTIONDESTRO_TECHNICAL.md
citizenchain/governance/resolution-issuance-gov/: Cargo.toml  RESOLUTIONISSUANCEGOV_TECHNICAL.md
citizenchain/governance/runtime-root-upgrade/: Cargo.toml  RUNTIMEROOT_TECHNICAL.md
citizenchain/governance/voting-engine-system/: Cargo.toml  VOTINGENGINE_TECHNICAL.md
citizenchain/issuance/citizen-lightnode-issuance/: CITIZENISS_TECHNICAL.md  Cargo.toml
citizenchain/issuance/fullnode-pow-reward/: Cargo.toml  FULLNODE_TECHNICAL.md
citizenchain/issuance/resolution-issuance-iss/: Cargo.toml  RESOLUTIONISS_TECHNICAL.md
citizenchain/issuance/shengbank-stake-interest/: Cargo.toml  SHENGBANK_TECHNICAL.md
citizenchain/node/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
citizenchain/node/capabilities/: default.json
citizenchain/node/chainspecs/: citizenchain.plain.json  citizenchain.raw.json
citizenchain/node/frontend/: App.tsx  api.ts  index.html  local-docs.generated.ts  package-lock.json  package.json  tsconfig.json  types.ts  ui-preview-a.html  ui-preview-b.html  ui-preview-c.html  vite.config.js  vite.config.ts
citizenchain/node/kernels/: blake2b_pow.cl
citizenchain/node/resources/: .gitignore
citizenchain/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  gpu_miner.rs  main.rs  offchain_gossip.rs  offchain_keystore.rs  offchain_ledger.rs  offchain_packer.rs  onchina_proc.rs  rpc.rs  service.rs  tls_cert.rs
citizenchain/nodeui/: .gitignore  Cargo.toml  NODEUI_TECHNICAL.md  README.md  package-lock.json  package.json  pubspec.yaml  tsconfig.test.json  vite.config.ts
citizenchain/nodeui/backend/: Cargo.toml  Info.plist  build.rs  (+1 more)
citizenchain/nodeuitauri/: Cargo.toml
citizenchain/onchina/: Cargo.toml
citizenchain/registry/: Cargo.toml
citizenchain/runtime/: Cargo.toml  README.md  build.rs
citizenchain/scripts/: acceptance.sh  bake-chainspec.sh  benchmark-weight-template.hbs  benchmark.sh  build-release.sh  check-constitution-genesis.py  citizenchain-node.service  clean-dev.sh  clean-run.sh  deploy-oracle.sh  dev.sh  download-wasm.sh  fetch-wasm.sh  fuwuqi.sh  generate-local-docs.mjs  im-two-node-smoke.sh  onchina-backup.sh  onchina-postgresql.conf.sample  onchina-restore.sh  parse_constitution.py  prepack.ps1  prepack.sh  registry-backup.sh  registry-postgresql.conf.sample  registry-restore.sh  run-benchmarks.sh  run.sh
citizenchain/template/: Cargo.toml
cpms/backend/: Cargo.toml  address.rs  build.rs  main.rs  rate_limit.rs  ss58.rs
cpms/host-program/: Cargo.toml  README.md
fcrcnode/: Cargo.toml  STRUCTURE.md
fcrcnode/backend/: Cargo.toml
fcrcnode/desktop/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
fcrcnode/docs/: TECH-BASELINE.md
node/: Cargo.toml
node/src/: chain_spec.rs  gongminbi.rs  main.rs
pallets/sheng_stake_lock/: Cargo.toml
pallets/shengbank-stake-addresslock/: Cargo.toml
pallets/shengbank-stake-interest/: Cargo.toml
primitives/: Cargo.toml  README.md
primitives/china/: china_cb.rs  china_ch.rs  china_jc.rs  china_js.rs  china_jy.rs  china_lf.rs  china_sf.rs  china_zb.rs  china_zf.rs  mod.rs
primitives/shenfenid/: .identity_code_seq.db  city_codes.py  shenfen_code.py
primitives/src/: balances.rs  bootnodes.json  citizen_const.rs  constants.rs  core_const.rs  count_const.rs  genesis.rs  governance.rs  lib.rs  pallet_ids.rs  pow.rs  pow_const.rs  reserve_const.rs  reserve_nodes.rs  reserve_nodes_const.rs  sheng_code.rs  shengbank_const.rs  shengbank_nodes.rs  shengbank_nodes_const.rs  shengbank_stake_const  shengbank_stakes_const.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
sfid/backend/: Cargo.toml  README.md  audit.rs  main.rs  main_tests.rs
tools/keyless/: Cargo.toml
tools/scripts/: Cargo.toml
wuminapp/: .gitignore  Cargo.toml  THREE_LAYER_PHASE0_BASELINE.md  WUMINAPP_TECHNICAL.md  analysis_options.yaml  pubspec.yaml
wuminapp/android/: build.gradle.kts
wuminapp/assets/: chainspec.json  chainspec.json.sha256  light_sync_state.json
wuminapp/backend/: Cargo.toml
wuminapp/docs/: API-SPEC.md  TECH-BASELINE.md
wuminapp/ios/: Podfile
wuminapp/lib/: citizen_tab_page.dart  main.dart  sfid_api_config.dart
wuminapp/mobile/: README.md  pubspec.yaml
wuminapp/native/: smoldot.h
wuminapp/rust/: Cargo.toml  build.rs
wuminapp/scripts/: app-clean-run.sh  app-run.sh  build-smoldot-native.sh  generate-chainspec.sh  wuminapp-run.sh
wuminapp/smoldot-dart/: UPSTREAM.md
wuminapp/smoldot-pow/: UPSTREAM.md
wuminapp/test/: myid_page_test.dart  sfid_api_config_test.dart  widget_test.dart
wuminapp/tools/: generate_admin_division_bundle.mjs  generate_public_institution_bundle.mjs
(+6794 files in other folders)
