[workspace]         # 声明整个仓库的工作空间
members = [
  "primitives",     # 全项目通用常量
  "tools/keyless",  # 工具库：无私钥地址生成工具
  "tools/scripts",  # 工具库：脚本工具
]
resolver = "2"      # 使用 Cargo 新版依赖解析器，减少 feature 冲突

[workspace.package]                                                 # 元信息（作为整个仓库的默认元数据）
edition = "2021"                                                    # Rust 版本规范（2021 Edition）
version = "0.0.1"                                                   # 整个工作空间的统一版本号（子 crate 可继承或覆盖）
authors = ["chengwei_voyager_rhett <chinanation@icloud.com>"]       # 作者信息
repository = "https://github.com/ChinaNation/GMB"                   # 项目仓库地址
license = "MIT"                                                     # 开源协议

[workspace.dependencies]
# 本地（统一给需要的子项目复用）
gmb-runtime = { path = "citizenchain/runtime" }
pallet-template = { path = "citizenchain/template" }

# 工具
codec      = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde      = { version = "1.0.197", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
clap       = { version = "4.5.3", features = ["derive"] }
futures    = { version = "0.3.30", features = ["thread-pool"] }
jsonrpsee  = { version = "0.24.2", features = ["server"] }
arrayvec   = { version = "0.7.6", default-features = false }

# SDK 核心零件 (统一使用 stable2512)
sp-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-block-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-blockchain = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-consensus-aura = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-core = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-genesis-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-inherents = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-io = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-keyring = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-offchain = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-runtime = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-session = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-storage = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-transaction-pool = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-timestamp = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
sp-version = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }

sc-basic-authorship = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-cli = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-client-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-consensus = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-consensus-aura = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-consensus-grandpa = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-executor = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-network = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-service = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-telemetry = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-transaction-pool = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
sc-transaction-pool-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }

frame-executive = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-support = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-system = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-benchmarking = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-system-benchmarking = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-try-runtime = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }

# ✅ 关键：Runtime APIs (这里是报错最多的地方)
frame-system-rpc-runtime-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }

# Pallets
pallet-aura = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-balances = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-grandpa = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-sudo = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-timestamp = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-transaction-payment = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
substrate-frame-rpc-system = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }

# Tools
substrate-build-script-utils = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
substrate-wasm-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix" }
